@@ -35,7 +35,7 @@ has the following effects:
 """
 
 from socket import SOCK_DGRAM, socket, _delegate_methods, error as socket_error
-from socket import AF_INET, SOCK_DGRAM, getaddrinfo
+from socket import AF_INET, SOCK_STREAM, SOCK_DGRAM, getaddrinfo
 from sslconnection import SSLConnection, PROTOCOL_DTLSv1, CERT_NONE
 from sslconnection import DTLS_OPENSSL_VERSION_NUMBER, DTLS_OPENSSL_VERSION
 from sslconnection import DTLS_OPENSSL_VERSION_INFO
@@ -62,10 +62,9 @@ def do_patch():
     ssl.get_server_certificate = _get_server_certificate
     raise_as_ssl_module_error()
 
-PROTOCOL_SSLv3 = 1
 PROTOCOL_SSLv23 = 2
 
-def _get_server_certificate(addr, ssl_version=PROTOCOL_SSLv3, ca_certs=None):
+def _get_server_certificate(addr, ssl_version=PROTOCOL_SSLv23, ca_certs=None):
     """Retrieve a server certificate
 
     Retrieve the certificate from the server at the specified address,
@@ -90,11 +89,14 @@ def _get_server_certificate(addr, ssl_version=PROTOCOL_SSLv3, ca_certs=None):
     s.close()
     return ssl.DER_cert_to_PEM_cert(dercert)
 
-def _SSLSocket_init(self, sock, keyfile=None, certfile=None,
+def _SSLSocket_init(self, sock=None, keyfile=None, certfile=None,
                     server_side=False, cert_reqs=CERT_NONE,
                     ssl_version=PROTOCOL_SSLv23, ca_certs=None,
                     do_handshake_on_connect=True,
-                    suppress_ragged_eofs=True, ciphers=None):
+                    family=AF_INET, type=SOCK_STREAM, proto=0, fileno=None,
+                    suppress_ragged_eofs=True, npn_protocols=None, ciphers=None,
+                    server_hostname=None,
+                    _context=None):
     is_connection = is_datagram = False
     if isinstance(sock, SSLConnection):
         is_connection = True
@@ -102,11 +104,19 @@ def _SSLSocket_init(self, sock, keyfile=None, certfile=None,
         is_datagram = True
     if not is_connection and not is_datagram:
         # Non-DTLS code path
-        return _orig_SSLSocket_init(self, sock, keyfile, certfile,
-                                    server_side, cert_reqs,
-                                    ssl_version, ca_certs,
+        return _orig_SSLSocket_init(self, sock=sock, keyfile=keyfile,
+                                    certfile=certfile, server_side=server_side,
+                                    cert_reqs=cert_reqs,
+                                    ssl_version=ssl_version, ca_certs=ca_certs,
+                                    do_handshake_on_connect=
                                     do_handshake_on_connect,
-                                    suppress_ragged_eofs, ciphers)
+                                    family=family, type=type, proto=proto,
+                                    fileno=fileno,
+                                    suppress_ragged_eofs=suppress_ragged_eofs,
+                                    npn_protocols=npn_protocols,
+                                    ciphers=ciphers,
+                                    server_hostname=server_hostname,
+                                    _context=_context)
     # DTLS code paths: datagram socket and newly accepted DTLS connection
     if is_datagram:
         socket.__init__(self, _sock=sock._sock)
@@ -140,8 +150,13 @@ def _SSLSocket_init(self, sock, keyfile=None, certfile=None,
                                          do_handshake_on_connect,
                                          suppress_ragged_eofs, ciphers)
     else:
+        self._connected = True
         self._sslobj = sock
 
+    class FakeContext(object):
+        check_hostname = False
+
+    self._context = FakeContext()
     self.keyfile = keyfile
     self.certfile = certfile
     self.cert_reqs = cert_reqs
